Moved connection logic