@@ -1,17 +1,16 @@
 package ai.attackframework.vectors.sources.burp.utils;
 
-import javax.net.ssl.HttpsURLConnection;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 
 public class OpenSearchClient {
 
     public static OpenSearchStatus testConnection(String baseUrl) {
         try {
-            URL url = new URL(baseUrl.endsWith("/") ? baseUrl : baseUrl + "/");
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+            URI uri = URI.create(baseUrl.endsWith("/") ? baseUrl : baseUrl + "/");
+            HttpURLConnection connection = (HttpURLConnection) uri.toURL().openConnection();
             connection.setRequestMethod("GET");
             connection.setConnectTimeout(3000);
             connection.setReadTimeout(3000);
@@ -23,13 +22,12 @@ public class OpenSearchClient {
 
             BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
             StringBuilder response = new StringBuilder();
-            for (String line; (line = reader.readLine()) != null;) {
+            for (String line; (line = reader.readLine()) != null; ) {
                 response.append(line);
             }
             reader.close();
 
             String body = response.toString();
-
             String distribution = extractJsonValue(body, "\"distribution\"");
             String version = extractJsonValue(body, "\"number\"");
             boolean looksLikeOpenSearch = body.toLowerCase().contains("opensearch");
@@ -47,13 +45,31 @@ public class OpenSearchClient {
         }
     }
 
+    public static OpenSearchStatus safeTestConnection(String baseUrl) {
+        try {
+            return testConnection(baseUrl);
+        } catch (Exception e) {
+            String msg = "OpenSearch connection test failed: " + e.getMessage();
+            Logger.logError(msg);
+            return new OpenSearchStatus(false, "", "", msg);
+        }
+    }
+
     private static String extractJsonValue(String json, String key) {
         int idx = json.indexOf(key);
         if (idx == -1) return "";
-        int start = json.indexOf(":", idx) + 1;
-        int quoteStart = json.indexOf("\"", start) + 1;
+
+        int colon = json.indexOf(":", idx);
+        if (colon == -1) return "";
+
+        int quoteStart = json.indexOf("\"", colon);
+        if (quoteStart == -1) return "";
+
+        quoteStart += 1;
+
         int quoteEnd = json.indexOf("\"", quoteStart);
-        if (start == -1 || quoteStart == -1 || quoteEnd == -1) return "";
+        if (quoteEnd == -1) return "";
+
         return json.substring(quoteStart, quoteEnd);
     }
 
